kubernetes/apps/kube-system/cilium/policies/allow-backup-drive-egress.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-backup-drive-egress
spec:
  enableDefaultDeny:
    egress: false
    ingress: false
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: backup-drive
      io.kubernetes.pod.namespace: media-server
  egress:
    - toCIDR:
        - 10.25.30.1/32
      toPorts:
        - ports:
            - port: "2049"
              protocol: TCP
